--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,24 @@
     <string name="landing_screen">Landing Screen</string>
     <string name="dont_have_account">Don’t have an account?</string>
     <string name="empty_notes">You’ve got an empty board,\nlet’s place your first note on it!</string>
+    <string name="user_added_message">%1$s %2$s successfully added!</string>
+    <string name="dialog_delete_title">Delete Note?</string>
+    <string name="dialog_delete_body_text">Are you sure you want to delete this note?
+This action cannot be undone.</string>
+    <string name="dialog_save_title">Save Note?</string>
+    <string name="dialog_save_body_text">Are you sure you want to save this note?</string>
+    <string name="dialog_discard_title">Discard Changes?</string>
+    <string name="dialog_discard_body_text">You have unsaved changes. If you discard now, all 
+changes will be lost.</string>
+    <string name="noteMark">NoteMark</string>
+    <string name="save_note">Save Note</string>
+    <string name="note_title">Note Title</string>
+    <string name="note_content">Tap to enter note content</string>
+    <string name="delete">Delete</string>
+    <string name="cancel">Cancel</string>
+    <string name="save">Save</string>
+    <string name="discard">Discard</string>
+    <string name="keep_editing">Keep Editing</string>
 
     <string name="error_email_password_incorrect">Either email or password is incorrect.</string>
     <string name="error_disk_full">Failed to save the item because your disk is full.</string>
@@ -35,10 +53,6 @@
     <string name="error_serialization">Oops, couldn\'t parse data.</string>
     <string name="error_unknown">An unknown error occurred.</string>
     <string name="error_conflict">Username or Email already exists!</string>
-    <string name="noteMark">NoteMark</string>
-    <string name="save_note">Save Note</string>
-    <string name="note_title">Note Title</string>
-    <string name="note_content">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </string>
 
 
 </resources>
