--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,11 +11,11 @@
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="repeat_password">Repeat Password</string>
-    <string name="username_info">Use between 3 and 20 characters for your username</string>
+    <string name="username_info">Use between %d and %d characters for your username</string>
     <string name="username_error">Username must be at least %d characters</string>
     <string name="invalid_email">Invalid email provided</string>
     <string name="password_do_not_match">Passwords do not match</string>
-    <string name="password_info">Use 8+ characters with a number or symbol for better security</string>
+    <string name="password_info">Use %d characters with a number or symbol for better security</string>
     <string name="password_error">Password must be at least %d characters and include a number or symbol</string>
     <string name="already_have_an_account">Already have an account?</string>
     <string name="your_own_collection_of_notes">Your Own Collection of Notes</string>
