--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,12 @@ changes will be lost.</string>
     <string name="settings">Settings</string>
     <string name="back">Back</string>
     <string name="logout">Logout</string>
+    <string name="all_notes">All notes</string>
+    <string name="date_created">Date created</string>
+    <string name="last_edit">Last edited</string>
+    <string name="edit">Edit</string>
+    <string name="view">View</string>
+    <string name="reader">"Reader "</string>
 
 
 </resources>
