--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,6 +94,7 @@ changes will be lost.</string>
     <string name="we_need_permission_to_alert_about_updates">We need notification permission to alert you about updates.</string>
     <string name="go_to_settings">Go to settings</string>
     <string name="retry">Retry</string>
+    <string name="close">Close</string>
 
 
 </resources>
